feat: add session desktop tab
